# widget_clients

./: .env.example  .flake8  README.md  main.py  pyproject.toml
data/: operations_err.json
htmlcov/: index.html
src/: decorators.py  external_api.py  find_dict.py  generators.py  main.py  masks.py  processing.py  read_csv_pandas.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_find_dict.py  test_generators.py  test_masks.py  test_processing.py  test_read_csv_pandas.py  test_utils.py  test_widget.py
